--- a/package.json
+++ b/package.json
@@ -20,10 +20,11 @@
     "browser-sync": "^2.9.8",
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "^3.0.2",
+    "gulp-cdnizer": "^1.1.6",
     "gulp-csso": "^1.0.0",
     "gulp-directive-replace": "^0.1.7",
-    "gulp-minify-html": "^1.0.4",
     "gulp-rename": "^1.2.2",
+    "gulp-replace": "^0.5.4",
     "gulp-uglify": "^1.4.1",
     "wiredep": "^2.2.2"
   }
